tests/compile_fail/debug/legacy_fmt_syntax.stderr
error: legacy syntax, remove `fmt =` and use `"Stuff({}): {}", bar` instead
 --> tests/compile_fail/debug/legacy_fmt_syntax.rs:3:12
  |
3 |     #[debug(fmt = "Stuff({}): {}", "bar")]
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
